# composure-rs

./: .gitignore  Cargo.toml  README  README.md
adapters/cloudflare/: Cargo.toml  README.md
adapters/cloudflare/src/: lib.rs
api/: Cargo.toml  README.md
api/src/: application_commands.rs  lib.rs
auth/: Cargo.toml
cloudflare/: Cargo.toml
cloudflare/src/: lib.rs
commands/: Cargo.toml  README.md
commands/src/: command.rs
commands/src/command/: builder.rs  implementation.rs  model.rs
models/: Cargo.toml
models/src/: common.rs  deserialize.rs  lib.rs
models/src/common/: snowflake.rs
models/src/deserialize/: application.rs  channel.rs  embed.rs  emoji.rs  interaction.rs  member.rs  message.rs  role.rs  sticker.rs
src/: lib.rs  models.rs
src/auth/: validate.rs
src/models/: common.rs  deserialize.rs  serialize.rs
src/models/common/: allowed_mentions.rs  attachment.rs  component.rs  embed.rs  emoji.rs  permissions.rs  snowflake.rs  type_field.rs
src/models/deserialize/: application.rs  channel.rs  interaction.rs  member.rs  message.rs  role.rs  sticker.rs
src/models/serialize/: interaction_response.rs
