[package]
name = "interaction_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
commands = { path = "./commands" }

[workspace]
members = ["commands", "api", "cloudflare"]
