[package]
name = "composure"
edition = "2021"
version = "0.0.1"
readme = "README.md"
description = "Discord bot framework for running on the edge"
repository = "https://github.com/BlueFrog130/composure-rs"
keywords = ["discord", "bot", "edge", "serverless", "wasm"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]

[workspace]
members = ["commands", "api", "adapters/cloudflare"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"