[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["serde_json", "blocking", "json"] }
models = { path = "../models" }
commands = { path = "../commands" }
