[package]
name = "conform_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["serde_json", "blocking", "json"] }
conform = { path = "../" }
conform_commands = { path = "../commands" }
serde = "1.0.160"
dotenv = "0.15.0"
itertools = "0.10.5"

[dev-dependencies]
dotenv = "0.15.0"
serde_json = "1.0.96"
