[package]
name = "composure_api"
version = "0.0.1"
edition = "2021"
readme = "README.md"
description = "Discord bot framework for running on the edge"
repository = "https://github.com/BlueFrog130/composure-rs/api"
keywords = ["discord", "bot", "edge", "serverless", "wasm"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["serde_json", "blocking", "json"] }
composure = { path = "../", version = "0.0.1" }
composure_commands = { path = "../commands", version = "0.0.1" }
serde = "1.0.160"
dotenv = "0.15.0"
itertools = "0.10.5"

[dev-dependencies]
dotenv = "0.15.0"
serde_json = "1.0.96"
