[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker = "0.0.16"
interaction_bot = { path = "../" }
serde_json = "1.0.96"
futures = { version = "0.3.28", default-features = false }
