[package]
name = "composure_commands"
version = "0.0.1"
edition = "2021"
readme = "README.md"
description = "Discord bot framework for running on the edge"
repository = "https://github.com/BlueFrog130/composure-rs/commands"
keywords = ["discord", "bot", "edge", "serverless", "wasm"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
composure = { path = "../", version = "0.0.1" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
